--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "contentlayer/generated": ["contentlayer/generated"]
     }
   },
   "include": [
@@ -30,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated"
+    "contentlayer/generated"
   ],
   "exclude": ["node_modules"]
 }
